k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-hello
  template:
    metadata:
      labels:
        app: grpc-hello
    spec:
      containers:
      - name: grpc-hello
        image: tuutoo/grpc-hello:latest
        ports:
        - containerPort: 50051
