k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-hello
spec:
  selector:
    app: grpc-hello
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
